redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
  namespace: sandee
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://sandee.com
spec:
  ingressClassName: nginx
  rules:
    - host: www.sandee.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandee-frontend
                port:
                  number: 3000
    - host: eks-www.sandee.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandee-frontend
                port:
                  number: 3000
